html and css layout complete, not responsive yet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <title>ideabox</title>
   </head>
   <body>
-
+    <section class="header">
+      <h1 class="title">idea<span class="box">box</span></h1>
+      <input class="title-input" placeholder=" Title" />
+      <input class="body-input" placeholder=" Body" />
+      <button class="save-button">save</button>
+    </section>
+    <section class="idea-container">
+      <input class="search-input" placeholder=" Search">
+      <article class="idea-card">
+        <div class="card-top">
+          <h2>Example Idea 1</h2>
+          <img src="assets/delete.svg" class="delete icon">
+        </div>
+        <p class="idea-text">I have no ideas because my brain is filled with coding stuff...</p>
+        <div class="card-bottom">
+          <img src="assets/upvote.svg" class="up-vote icon">
+          <img src="assets/downvote.svg" class="down-vote icon">
+          <p class="quality">quality: swill</p>
+        </div>
+        <hr>
+      </article>
+    </section>
     <link href="script.js">
   </body>
 </html>
