Added one media query

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
         <div class="card-top">
           <h2>Example Idea 1</h2>
           <img src="assets/delete.svg" class="delete icon">
+          <img src="assets/delete-hover.svg" class="delete-hover">
         </div>
         <p class="idea-text">I have no ideas because my brain is filled with coding stuff...</p>
         <div class="card-bottom">
           <img src="assets/upvote.svg" class="up-vote icon">
+          <img src="assets/upvote-hover.svg" class="up-vote-hover icon">
           <img src="assets/downvote.svg" class="down-vote icon">
+          <img src="assets/downvote-hover.svg" class="down-vote-hover icon" class="down-vote-hover"
           <p class="quality">quality: swill</p>
         </div>
         <hr>
