Applied prepend to save button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       <input class="body-input" placeholder=" Body" />
       <button class="save-button">save</button>
     </section>
-    <section class="idea-container">
+    <div class="search-bar">
       <input class="search-input" placeholder=" Search">
-      <article class="idea-card">
+    </div>
+    <section class="idea-container">
+
+      <!-- <article class="idea-card">
         <div class="card-top">
           <h2>Example Idea 1</h2>
           <img src="assets/delete.svg" class="delete icon">
@@ -33,8 +36,12 @@
           <p class="quality">quality: swill</p>
         </div>
         <hr>
-      </article>
+      </article> -->
     </section>
-    <link href="script.js">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+       crossorigin="anonymous">
+    </script>
+    <script src="script.js"></script>
   </body>
 </html>
