Added individual ID to each card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="title">idea<span class="box">box</span></h1>
       <input class="title-input" placeholder=" Title" />
       <input class="body-input" placeholder=" Body" />
-      <button class="save-button">save</button>
+      <button class="save-button" disabled="true">save</button>
     </section>
     <div class="search-bar">
       <input class="search-input" placeholder=" Search">
