add importance array

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <header>
       <h1 class="title">2Do<span class="box">Box</span></h1>
-      <input class="title-input" placeholder="Title" />
+      <input class="title-input" placeholder="Title"/>
       <textarea class="task-input" placeholder="Task"></textarea>
       <button class="save-btn" disabled="true">save</button>
     </header>
-    <section class="search-container">
-      <input class="search-input" placeholder="Search" />
+    <section class="filter-container">
+      <input class="filter-input" placeholder="Filter" />
     </section>
     <section class="todo-container">
 
