--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
       <input class="title-input" placeholder="Title"/>
       <textarea class="task-input" placeholder="Task"></textarea>
       <button class="save-btn" disabled="true">save</button>
+      <button class="show-completed-btn">show completed TODOs</button>
     </header>
     <section class="filter-container">
       <input class="filter-input" placeholder="Filter" />
+      <div class="filter-btn-container">
+        <button class="importance-btn" type="button" name="button">Critical</button>
+        <button class="importance-btn" type="button" name="button">High</button>
+        <button class="importance-btn" type="button" name="button">Normal</button>
+        <button class="importance-btn" type="button" name="button">Low</button>
+        <button class="importance-btn" type="button" name="button">None</button>
+      </div>
     </section>
     <section class="todo-container">
 
@@ -37,6 +45,7 @@
         </div>
         <hr>
       </article> -->
+      <button class="show-more-btn" type="button" name="show more TODOs button">show more TODOs...</button>
     </section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
