some SRP and adding complete toggle functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <input class="title-input" placeholder="Title"/>
       <textarea class="task-input" placeholder="Task"></textarea>
       <button class="save-btn" disabled="true">save</button>
-      <button class="show-completed-btn">show completed TODOs</button>
+      <div class="toggle-complete-btns">
+        <button class="show-completed-btn">Show Completed ToDos</button>
+        <button class="hide-completed-btn">Hide Completed ToDos</button>
+      </div>
     </header>
     <section class="filter-container">
       <input class="filter-input" placeholder="Filter" />
