make buttons lowercase

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <textarea class="task-input" placeholder="Task"></textarea>
       <button class="save-btn" disabled="true">save</button>
       <div class="toggle-complete-btns">
-        <button class="show-completed-btn">Show Completed ToDos</button>
-        <button class="hide-completed-btn">Hide Completed ToDos</button>
+        <button class="show-completed-btn">show completed ToDos</button>
+        <button class="hide-completed-btn">hide completed ToDos</button>
       </div>
     </header>
     <section class="filter-container">
@@ -31,7 +31,7 @@
       </div>
     </section>
     <section class="todo-container">
-      <button class="show-more-btn" type="button" name="show more TODOs button">show more TODOs...</button>
+      <button class="show-more-btn" type="button" name="show more TODOs button">show more ToDos...</button>
     </section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
