add filter functionality

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
       <textarea class="task-input" placeholder="Task"></textarea>
       <button class="save-btn" disabled="true">save</button>
       <div class="toggle-complete-btns">
-        <button class="show-completed-btn">show completed ToDos</button>
+        <button class="show-completed-btn">show all ToDos</button>
         <button class="hide-completed-btn">hide completed ToDos</button>
       </div>
     </header>
     <section class="filter-container">
       <input class="filter-input" placeholder="Filter" />
       <div class="filter-btn-container">
-        <button class="importance-btn" type="button" name="button">Critical</button>
-        <button class="importance-btn" type="button" name="button">High</button>
-        <button class="importance-btn" type="button" name="button">Normal</button>
-        <button class="importance-btn" type="button" name="button">Low</button>
-        <button class="importance-btn" type="button" name="button">None</button>
+        <button class="importance-btn" type="button" name="button">critical</button>
+        <button class="importance-btn" type="button" name="button">high</button>
+        <button class="importance-btn" type="button" name="button">normal</button>
+        <button class="importance-btn" type="button" name="button">low</button>
+        <button class="importance-btn" type="button" name="button">none</button>
       </div>
     </section>
     <section class="todo-container">
