building out remainder of phase 3

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="save-btn" disabled="true">save</button>
       <div class="toggle-complete-btns">
         <button class="show-completed-btn">show all ToDos</button>
-        <button class="hide-completed-btn">hide completed ToDos</button>
+        <button class="clear-filter-btn">clear filters</button>
       </div>
     </header>
     <section class="filter-container">
@@ -30,9 +30,8 @@
         <button class="importance-btn" type="button" name="button">none</button>
       </div>
     </section>
-    <section class="todo-container">
-      <button class="show-more-btn" type="button" name="show more TODOs button">show more ToDos...</button>
-    </section>
+    <section class="todo-container"></section>
+    <button class="show-more-btn" type="button" name="show more TODOs button">show more ToDos...</button>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
     <script src="script.js"></script>
