--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1 class="title">2Do<span class="box">Box</span></h1>
       <input class="title-input" placeholder="Title"/>
-      <textarea class="task-input" placeholder="Task"></textarea>
+      <input class="task-input" placeholder="Task"/>
       <button class="save-btn" disabled="true">save</button>
       <div class="toggle-complete-btns">
         <button class="show-completed-btn">show all ToDos</button>
