--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       <input class="title-input" placeholder="Title"/>
       <input class="task-input" placeholder="Task"/>
       <button class="save-btn" disabled="true">save</button>
-      <div class="toggle-complete-btns">
-        <button class="show-completed-btn">show all ToDos</button>
-        <button class="clear-filter-btn">clear filters</button>
-      </div>
+      <button class="show-completed-btn">show all ToDos</button>
     </header>
     <section class="filter-container">
       <input class="filter-input" placeholder="Filter" />
@@ -28,6 +25,7 @@
         <button class="importance-btn" type="button" name="button">normal</button>
         <button class="importance-btn" type="button" name="button">low</button>
         <button class="importance-btn" type="button" name="button">none</button>
+        <button class="clear-filter-btn" type="button" name="button">clear filters</button>
       </div>
     </section>
     <section class="todo-container"></section>
